force-app/main/default/objects/nBRIDGER__OFAC_Address__c/nBRIDGER__OFAC_Address__c.object-meta.xml
<CustomObject>
    <label>OFAC_Address</label>
    <nameField>
        <label>OFAC_Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>