force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__City__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>