force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__Country__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>