force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__OFAC_Match__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__OFAC_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OFAC_Match</label>
    <referenceTo>nBRIDGER__OFAC_Match__c</referenceTo>
    <relationshipLabel>OFAC_Addresses</relationshipLabel>
    <relationshipName>OFAC_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>