force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Postal_Code__c</fullName>
    <label>Postal_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>