force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__State__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>