force-app/main/default/objects/nBRIDGER__OFAC_Address__c/fields/nBRIDGER__Street__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>